...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp" />

                    <EditText
                        android:id="@+id/medicationAmountInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/medication_amount_hint"
                        android:inputType="numberDecimal"
                        android:layout_marginBottom="8dp" />

...
                        android:layout_height="wrap_content"
                        android:hint="@string/medication_notes_hint"
                        android:inputType="text"
                        android:layout_marginBottom="8dp" />

                    <Button
                        android:id="@+id/addMedicationLogButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/medication_log_add_entry" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
...
